--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,10 +20,12 @@ target_link_libraries(1.1test gtest gtest_main)
 # Linking for the project
 target_link_libraries(1.1test 1.1lib)
 
+add_executable(1.2test 1.2test.cpp)
+target_link_libraries(1.2test gtest gtest_main)
+target_link_libraries(1.2test 1.2lib)
+
 add_executable(2.1test 2.1test.cpp)
-# Linking for gtest stuff
 target_link_libraries(2.1test gtest gtest_main)
-# Linking for the project
 target_link_libraries(2.1test 2.1lib)
 
 add_executable(2.2test 2.2test.cpp)
