--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(1.1lib 1.1.cpp)
+add_library(1.2lib 1.2.cpp)
 add_library(2.1lib 2.1.cpp)
 add_library(2.2lib 2.2.cpp)
 add_library(2.4lib 2.4.cpp)
